install_subdir(
  'gnome-shell-extension-lockkeys/lockkeys@vaina.lt',
  install_dir: join_paths(get_option('datadir'), 'gnome-shell', 'extensions'),
)

install_data(
  'gnome-shell-extension-lockkeys/lockkeys@vaina.lt/schemas/org.gnome.shell.extensions.lockkeys.gschema.xml',
  install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas'),
)
