plymouth_dir = join_paths(get_option('datadir'), 'plymouth', 'themes')
main_dir = join_paths(plymouth_dir, meson.project_name())

main_sources = [
	'bullet.png',
	'entry.png',
	'box.png',
	'lock.png',
	'lock.svg',
	'StarLabs.grub',
	'StarLabs.plymouth',
'animation-0000.png',
'animation-0001.png',
'animation-0002.png',
'animation-0003.png',
'animation-0004.png',
'animation-0005.png',
'animation-0006.png',
'animation-0007.png',
'animation-0008.png',
'animation-0009.png',
'animation-0010.png',
'animation-0011.png',
'animation-0012.png',
'animation-0013.png',
'animation-0014.png',
'animation-0015.png',
'animation-0016.png',
'animation-0017.png',
'animation-0018.png',
'animation-0019.png',
'animation-0020.png',
'animation-0021.png',
'animation-0022.png',
'animation-0023.png',
'animation-0024.png',
'animation-0025.png',
'animation-0026.png',
'animation-0027.png',
'animation-0028.png',
'animation-0029.png'
]



install_data(main_sources, install_dir: main_dir)
